@@ -1,3 +1,8 @@
+2004-08-06  Xavier Ordoquy  <xordoquy@linovia.com>
+
+	* src/planner-sql-plugin.c:
+	Now uses the GtkUIManager for the menu/toolbar.
+
 2004-08-06  Richard Hult  <richard@imendio.com>
 
 	* src/planner-resource-cmd.c: Include config.h.
